# osupp

./: .coderabbit.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SECUIRTY.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml  labels.yml
.github/workflows/: codeql.yml  coverage.yml  docs-check.yml  enforce-docs.yml  labeler.yml  pa-labels.yml  pr-template-check.yml  stale.yml  sync-labels.yml  validate-pr-title.yml
osupp/Beatmap/: __init__.py  beatmap.py  decode.py  encode.py  format_version.py  reader.py  utils.py
osupp/Beatmap/reader/: __init__.py  decoder.py  encoding.py  u16_iter.py
osupp/Beatmap/resources/: adjacent-catmull-segments.osu  approach-rate-after-overall-difficulty.osu  approach-rate-before-overall-difficulty.osu  beatmap-version-6.osu  catmull-duplicate-initial-controlpoint.osu  comments.osu  controlpoint-custom-samplebank.osu  custom-slider-length.osu  empty-line-instead-of-header.osu  empty-lines-at-start.osu  hitobject-combo-offset.osu  hitobject-no-addition-bank.osu  multi-segment-slider.osu  nan-control-points.osu  no-empty-line-after-header.osu  slider-samples.osu  spinner-between-objects.osu  undefined-approach-rate.osu
osupp/Beatmap/section/: __init__.py  colors.py  difficulty.py  editor.py  enums.py  events.py  general.py  metadata.py  timing_points.py
osupp/Beatmap/section/colors/: __init__.py  decode.py  mod.py
osupp/Beatmap/section/events/: __init__.py  decode.py  mod.py
osupp/Beatmap/section/general/: __init__.py  decode.py  mod.py
osupp/Beatmap/tests/: decode.py  encode.py  encodings.py  others_tests.py  test_encode.py  test_encoding.py
osupp/Beatmap/utils/: __init__.py  key_value.py  parse_number.py  pos.py  str_extra.py
osupp/Mods/: __init__.py  _patches.py  acronym.py  game_mod.py  game_mod_intermode.py  game_mod_kind.py  game_mod_simple.py  game_mode.py  game_mods.py  game_mods_intermode.py  game_mods_legacy.py  generated_mods.py
osupp/Mods/tests/: test_osupp_mods.py
osupp/Performance/: utils.py
osupp/Performance/any/: any.py  difficulty.py  performance.py
osupp/Performance/data/: attributes.py  beatmap.py  hit_objects.py  mode.py  mods.py  score_state.py
osupp/Performance/model/: control_points.py  model.py
osupp/Performance/osu/: hitresult_generator.py  legacy_score_simulator.py  osu.py  performance.py  utils.py
osupp/Performance/rulesets/: attributes.py  gradual.py
osupp/Performance/utils/: __init__.py  random.py  sort.py  util.py  utils.py
(+30 files in other folders)
