[tool.poetry]
name = "osupp"
version = "0.17.0"
description = "osu! PP Calculation for Python"
authors = [
    "DevilPedrow",
    "Error44"
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
