[tool.poetry]
name = "osupp"
version = "0.17.41"
description = "All-in-one Python library for osu! beatmap parsing, mod handling, and pp calculation. The only osu! lib you'll ever need."
authors = [
    "Error44 <error44@olib.dev>",
    "DevilPedrow <devilpedrow@olib.dev>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/O-Lib/osupp"
repository = "https://github.com/O-Lib/osupp"
documentation = "https://github.com/O-Lib/osupp#readme"
keywords = ["osu", "beatmap", "parser", "mods", "performance", "pp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [{ include = "osupp" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
mypy = ">=1.0"
ruff = ">=0.9"
pre-commit = ">=3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PYI"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=osupp --cov-report=term-missing"

[tool.coverage.run]
source = ["osupp"]
omit = ["tests/*"]
